# facedetector

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: det1_predict.pb  det2_predict.pb  det3_predict.pb
app/src/main/cpp/: Facedetection.h  boundingbox.h  caffe_sane.cpp  caffe_sane.h  calcarea.cpp  calcarea.h  native-lib.cpp
app/src/main/java/facebook/f8demo/: ClassifyCamera.java
app/src/main/res/layout/: activity_classify_camera.xml
openCVLibrary310/: build.gradle
